<resources>
    <string name="app_name">Mov Apps</string>
    <string name="lewati">Lewati</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="mulai">Mulai</string>
    <string name="daftar">Daftar</string>
    <string name="cashless_caption">Gunakan E-Wallet untuk kemudahan\ndalam transaksi.</string>
    <string name="cashless">Cashless</string>
    <string name="pre_sale">Pre-Sale</string>
    <string name="pre_sale_caption">Tidak perlu takut ketinggalan \nfilm-film terbaru.</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_caption">Dapatkan informasi mengenai film\nyang sedang tayang saat ini.</string>
    <string name="masuk">Masuk</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="nama">Nama</string>
    <string name="email">Alamat Email</string>
    <string name="avatar">Avatar</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="name_one">Baziyad Hummam</string>
    <string name="simpan">Simpan</string>
    <string name="tambah">Tambah</string>
    <string name="balance">IDR 200K</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="home">Home</string>
    <string name="my_ticket">My Ticket</string>
    <string name="settings">Settings</string>
    <string name="pilih_kursi">Pilih Kursi</string>
    <string name="backdrop">Backdrop</string>
    <string name="play">play</string>
    <string name="shazam">Shazam!</string>
    <string name="genre">Action, Family</string>
    <string name="rating">7.8</string>
    <string name="sinopsis">A boy is given the ability to become an adult superhero in times of need with a single magic word.</string>
    <string name="cast"><![CDATA[Cast & Crew]]></string>
    <string name="beli">Beli Tiket</string>
    <string name="layar">Layar</string>
    <string name="chair">D4, D5</string>
    <string name="one">1</string>
    <string name="six">6</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="note">Note</string>
    <string name="checkout">Checkout</string>
    <string name="date">20 Mei, 09.30 WIB</string>
    <string name="location">Cinepolis Matos</string>
    <string name="discount">Buy 1 Get 1</string>
    <string name="price">IDR 25K</string>
    <string name="total">Total</string>
    <string name="saldo">Saldo</string>
    <string name="batal">Batalkan</string>
    <string name="bayar">Bayar Sekarang</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="wallet">My Wallet</string>
    <string name="top_up">Top Up</string>
    <string name="transaksi">Detail Transaksi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_caption">Tiket berhasil dibeli dan silakan\nmenikmati filmnya.</string>
    <string name="watching">Happy Watching!</string>
    <string name="lihat">Lihat Tiket</string>
    <string name="ticket_caption">Film apa saja yang akan anda tonton?</string>
    <string name="ticket_info">Ticket Info</string>
    <string name="refund">Refund</string>
    <string name="code">Booking Code</string>
    <string name="settings_caption">Keep it up-to-date</string>
    <string name="edit">Edit Profile</string>
    <string name="notification">Notification Settings</string>
    <string name="isi_saldo">Top Up Balance</string>
    <string name="help">Help</string>
    <string name="logout">Sign Out</string>
    <string name="warning">Saldo anda tidak mencukupi\nuntuk melakukan transaksi ini</string>
</resources>
